fixed navbar css becoming invisible again

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -1,7 +1,6 @@
 .navbar {
     background-color: #f3dbae; /* Slightly darker shade for contrast */
     padding: 0.5rem 1rem; /* Increased padding for more space */
-    height:70px;
     display: flex;
     align-items: center;
     justify-content: center; /* Center the items horizontally */
